--- a/style/style.css
+++ b/style/style.css
@@ -143,6 +143,7 @@ img {
 }
 
 main {
+  height: 100%;
   padding: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -150,10 +151,6 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
 }
 
 main h1 {
@@ -174,6 +171,16 @@ main h1 {
   main h1 {
     font-size: 4rem;
     max-width: 45rem;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  main h1 {
+    font-size: 5rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
